# BestPlanerEver

./: .gitignore  CMakeLists.txt  README.md  async.http.server.cpp  async.http.server.h  client.cpp  client.h  connection.cpp  main.cpp
V2/: CMakeLists.txt  DB.cpp  Header.h
gitDB/: CMakeLists.txt  DBnaSQl.txt  main.cpp
gui+client/my_love_project/: CMakeLists.txt
gui+client/my_love_project/include/: client.h  create_new_task.h  mainwindow.h  planwindow.h  settingsform.h
gui+client/my_love_project/src/: catform.ui  client.cpp  mainwindow.cpp  planwindow.cpp  regform.cpp
my_love_project/: CMakeCache.txt  CMakeLists.txt  Makefile  mainwindow.cpp  planwindow.h  regform.ui  style.css
my_love_project/include/: client.h  create_new_task.h  edittask.h  mainwindow.h  planwindow.h  regform.h
my_love_project/sources/: style.css
my_love_project/src/: client.cpp  create_new_task.cpp  create_new_task.ui  edittask.cpp  edittask.ui  main.cpp  mainwindow.cpp  mainwindow.ui  planwindow.cpp  planwindow.ui  regform.cpp  regform.ui  settingsform.cpp  settingsform.ui
no commets/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui  planwindow.cpp  planwindow.h  planwindow.ui  regform.cpp  resources.qrc  style.css
server+BD/: CMakeLists.txt  async.http.server.cpp  async.http.server.h  connection.cpp  connection.h
server+BD/V2/: DB.cpp  Header.h
src/: client.cpp  planwindow.cpp
